tests/fails/f34.t

terra foo()
  return aa
end
foo()